--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,19 @@
   box-sizing: inherit; }
 
 html {
-  font-size: 10px; }
+  font-size: 62.5%; }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 37.55em) and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 56.255em) and (max-width: 75em) {
+    html {
+      font-size: 56%; } }
+  @media (min-width: 75.05em) and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   font-family: 'Lato', sans-serif;
