--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,7 +9,21 @@
 }
 
 html {
-    font-size: 10px;
+    // font-size: 10px;
+    font-size: 62.5%;
+
+    @include respond(phone) {
+        font-size: 50%; 
+    }
+    @include respond(tab-port) {
+        font-size: 50%; 
+    }
+    @include respond(tab-land) {
+        font-size: 56%; 
+    }
+    @include respond(desktop) {
+        font-size: 75%; 
+    }
 }
 
 body {
