--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,6 +3,7 @@
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
+    
 
     &--main {
         display: block;
@@ -12,6 +13,11 @@
     
         animation-name: moveLeft;
         animation-duration: 3s;
+
+        @include respond(phone) {
+            letter-spacing: 1.5rem;
+            font-size: 5rem;
+        }
     }
     
     &--sub {
@@ -22,6 +28,10 @@
     
         animation-name: moveRight;
         animation-duration: 3s;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 
 }
@@ -37,6 +47,14 @@
     color: transparent;
     letter-spacing: 2px;
     transition: all .3s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         text-shadow: 0px .6rem .8rem rgba($color-black, 0.1);
