--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -11,6 +11,12 @@
     visibility: hidden;
     transition: all .5s;
 
+    @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, .3);
+    }
+
     &:target {
         opacity: 1;
         visibility: visible
@@ -38,6 +44,10 @@
         width: 33.333333%;
         display: table-cell;
         vertical-align: middle;
+
+        @include respond(tab-port) {
+            display: none;
+        }
     }
 
     &__right {
@@ -45,6 +55,11 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-port) {
+            width: 100%;
+            display: inline-block;
+        }
     }
 
     &__img {
